# FeverTime

./: .gitmodules  CMakeLists.txt
res/: 3unit_3dcompare.csv  data.ply
res/3D/: Tooth.alp  patch.ply
src/: App.cpp  App.h  AppCallbacks.cpp  AppCallbacks.h  Common.cpp  Common.h  CustomInteractorStyle.cpp  CustomInteractorStyle.h  CustomTrackballStyle.cpp  CustomTrackballStyle.h  Entity.cpp  Entity.h  HashMap.cu  HashMap.cuh  LabelCounter.cu  LabelCounter.cuh  PointCloud.cu  PointCloud.cuh  Serialization.hpp  cudaCommon.h  cudaHeaderFiles.h  main.cpp  main.cu  main.cuh  main_csv.cpp_  stdHeaderFiles.h  thrustHeaderFiles.h  vtkHeaderFiles.h
src/App/: App.cpp  App.h  AppCallbacks.cpp  AppCallbacks.h  CustomInteractorStyle.cpp  CustomPolyDataFilter.cpp  CustomTrackballStyle.cpp  CustomTrackballStyle.h  Entity.cpp  Monitor.cpp  USBHandler.cpp
src/CUDA/: CMakeLists.txt  HalfEdge.cu  HalfEdge.cuh  HashMap.cu  HashMap.cuh  LabelCounter.cu  LabelCounter.cuh  PCD.cu  PCD.cuh  PointCloud.cu  PointCloud.cuh  PointCloudBuffers.cu  PointCloudBuffers.cuh  TSDF.cu  TSDF.cuh  cudaCommon.cu  cudaCommon.cuh  main.cu  main.cuh
src/CUDA/PointCloudAlgorithms/: PointCloudAlgorithm_CheckOverlap.cu  PointCloudAlgorithm_CheckOverlap.cuh  PointCloudAlgorithm_Clustering.cu  PointCloudAlgorithm_Clustering.cuh  PointCloudAlgorithm_ClusteringFilter.cu  PointCloudAlgorithm_ClusteringFilter.cuh  PointCloudAlgorithm_ComputeTSDF.cu  PointCloudAlgorithm_ComputeTSDF.cuh  PointCloudAlgorithm_FindSurfaceNeighbor.cu  PointCloudAlgorithm_FindSurfaceNeighbor.cuh  PointCloudAlgorithm_Laplacian.cu  PointCloudAlgorithm_Laplacian.cuh  PointCloudAlgorithm_NormalSimilarity.cu  PointCloudAlgorithm_NormalSimilarity.cuh  PointCloudAlgorithm_Smoothing.cu  PointCloudAlgorithm_Smoothing.cuh  PointCloud_Algorithm.cuh  PointCloud_Clustering.cu  PointCloud_ComputeColorMultiplication.cu  PointCloud_ComputeEmptyNeighborCount.cu  PointCloud_ComputeNeighborCount.cu  PointCloud_ComputeNormalDiscontinuity.cu  PointCloud_ComputeNormalDivergence.cu  PointCloud_ComputeNormalGradient.cu  PointCloud_ComputeVertexNormalPCA.cu  PointCloud_ComputeVoxelNormalAverage.cu
src/Debugging/: VisualDebugging.cpp  VisualDebugging.h  VisualDebuggingLayer.cpp  VisualDebuggingLayer.h
